2008-12-05  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/taper.c: remove dead code that can cause compiler errors

2008-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c: Send a message with NO-NEW-TAPE.
	* server-src/driver.c: Generate message for NO-NEW-TAPE, call
	  start_degraded_mode when sending NO-NEW-TAPE, Fix a subscript error 
	  for INPUT-ERROR and TAPE-ERROR
	* server-src/taper.c: Get message from NO-NEW-TAPE command and log it.

2008-12-03  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Provide default unit.

2008-12-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheckdump.pl: Use GNUTAR to validate smbclient image.

2008-12-01  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3.c: fix signedness

2008-12-01  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/util.c: fix mishandling of trailing backslash in
	  unquote_string

2008-12-01  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3.c, device-src/s3.h: Fix segmentation fault within s3_make_bucket
	  by adding some "null-op" read and write functions.

2008-11-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Correctly parse degraded size.

2008-11-26  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Set application in extraction command.

2008-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: AM_INIT_AUTOMAKE(amanda, "2.6.1b1")
	* ReleaseNotes: Release notes for 2.6.1b1.
	* NEWS: News for 2.6.1b1.
	* packaging/deb/rules, packaging/deb/buildpkg,
	  packaging/rpm/buildpkg,
	  packaging/rpm/amanda.spec: Change version to 2.6.1b1.

2008-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/bsd-security.m4: Fix.
	* config/amanda/bsdtcp-security.m4: Enable --with-bsdtcp-secutiy by
	                                    default.
	* config/amanda/ssh-security.m4: Enable --with-ssh-security by default.
