@@ -1,0 +1,73 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+                   "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd"
+[
+  <!-- entities files to use -->
+  <!ENTITY % global_entities SYSTEM '../entities/global.entities'>
+  %global_entities;
+]>
+
+<refentry id='amvault.8'>
+<refmeta>
+<refentrytitle>amvault</refentrytitle>
+<manvolnum>8</manvolnum>
+</refmeta>
+<refnamediv>
+<refname>amvault</refname>
+<refpurpose>Copy &A; dumps from one volume to another</refpurpose>
+</refnamediv>
+<!-- body begins here -->
+<refsynopsisdiv>
+<cmdsynopsis>
+  <command>amvault</command>
+    <arg choice='plain' rep='repeat'><group><arg choice='plain'>-o </arg><replaceable>configoption</replaceable></group></arg>
+    <arg choice='plain'><replaceable>config</replaceable></arg>
+    <arg choice='plain'><replaceable>src-run-timestamp</replaceable></arg>
+    <arg choice='plain'><replaceable>dst-changer</replaceable></arg>
+    <arg choice='plain'><replaceable>label-template</replaceable></arg>
+</cmdsynopsis>
+</refsynopsisdiv>
+
+<refsect1><title>WARNING</title>
+This application is not yet in its final form, and is subject to major revision
+in subsequent versions of Amanda.  Backward compatibility is not guaranteed.
+</refsect1>
+
+<refsect1><title>DESCRIPTION</title>
+
+<para><emphasis remap='B'>Amvault</emphasis> Copies data from the run with
+timestamp <emphasis remap='I'>src-run-timestamp</emphasis> onto volumes using
+the changer <emphasis remap='I'>dst-changer</emphasis>, labeling new volumes
+with <emphasis remap='I'>label-template</emphasis>.  If <emphasis
+remap='I'>src-run-timestamp</emphasis> is "latest", then the most recent amdump
+or amflush run will be used.</para>
+
+<para>Each source volume will be copied to a new destination volume; no
+re-assembly or splitting will be performed.  Destination volumes must be at
+least as large as the source volumes.</para>
+
+<para>The changer parameter should specify the name of a changer defined in
+&amconf;.  For example:
+<programlisting>
+define changer vaulting_tape {
+    tapedev "/dev/rmt/1n"
+    tpchanger "chg-zd-mtx"
+    changerdev "/dev/sg0"
+    changerfile "vaulting-changer.conf"
+}
+</programlisting></para>
+
+<para>The label template functions identically to the <emphasis
+remap='I'>label-new-tapes</emphasis> parameter in &amconf;.</para>
+
+</refsect1>
+
+<refsect1><title>AUTHOR</title>
+<para>Dustin J. Mitchell, &email.dustin; : Original text</para>
+</refsect1>
+
+<refsect1><title>SEE ALSO</title>
+<para><citerefentry><refentrytitle>amanda</refentrytitle><manvolnum>8</manvolnum></citerefentry></para>
+</refsect1>
+</refentry>
+
